<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fitness Buddy</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="signup_name">Username</string>
    <string name="Account">Create Account</string>
    <string name="imgdesc">decoration image</string>
    <string name="Welcome">Welcome</string>
    <string name="desc">Track your progress.</string>
    <string name="desc2" tools:ignore="DuplicateDefinition">Stay on the path.</string>
    <string name="start">Get Started</string>
    <string name="button">Button</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="register">Don\'t have an account?</string>
    <string name="facebook_app_id">4051532081633072</string>
    <string name="fb_login_protocol_scheme">fb4051532081633072</string>

    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="todo">TODO</string>
    <string name="already_registered">Already registered?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="disconnect">Disconnected</string>
    <string name="disconnected">Disconnected</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="on">On</string>
    <string name="off">Off</string>

</resources>