<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blueish"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_wave__6_"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:maxHeight="150dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4">

        <EditText
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="85dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:fontFamily="@font/lato"
            android:hint="@string/signup_name"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:textStyle="bold"
            android:autofillHints="" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            app:srcCompat="@drawable/ic_round_person_24"
            android:contentDescription="@string/todo" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:maxHeight="150dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <EditText
            android:id="@+id/SignupEmail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="85dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/lato"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/login_email"
            android:elevation="32dp"
            android:foregroundTint="@color/blueish"
            app:srcCompat="@drawable/ic_round_email_24" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:maxHeight="150dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <EditText
            android:id="@+id/SignupPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="85dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/lato"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/blueish"
            android:contentDescription="@string/login_password"
            android:elevation="32dp"
            app:srcCompat="@drawable/ic_round_lock_24" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/lato"
        android:text="@string/SignUp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/textview3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        tools:text="@string/SignUp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="193dp"
        android:layout_height="87dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="200dp"
        android:fontFamily="@font/lato"
        android:text="@string/SignUp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/already_registered"
        android:textAlignment="textStart"
        android:textColor="#131313"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Login2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp"
        tools:text="Already registered?" />

    <Button
        android:id="@+id/Login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/lato"
        android:text="@string/login_button"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview3"
        tools:text="@string/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>